@@ -1,3 +1,1 @@
-DIST ruby-stemmer-0.9.1.gem 142848 SHA256 8f55bf8fdf7ea6987559d289f23d3f82b43780195657e92402be0e540b32e4e5 SHA512 2f75e7c5fce562fbccad527c8c2a9691ebdbb602bbf8ceaee0c605cf6f1c4ea3c02989f5eec261ec1cf55eec55704717ca8e68632a8ecf911ce6560059680d0e WHIRLPOOL cff16ce09ea526e83fbf99cf76584ede4a791111dbb828e93ce29500b356da0d3cd5c935318dd489766411fca2c9e12fae7a9fedabf0e45e200b3cb41b63e3fc
-DIST ruby-stemmer-0.9.3.gem 143360 SHA256 616115f0cf681fd719ec51a2c749fdef87ea5844d2d9f93f93bf0067d0a9639c SHA512 9977261208b8b80bf694f10865b5ab7c60a58934f36bc157fb7b051fe6a5d05caa91a4cb597526818cf9cce60ee45ff05e6236f3dc7e0b5084df75b78f2dba1c WHIRLPOOL 0a47e943c69a44e8f1a5ccafc74fa2768f9ed03def3aecbbdfbb758ecac823c61f894b0381ff46ee27ed3c874f3b1ccf5e5838954d343c111af6b6b3230056df
 DIST ruby-stemmer-0.9.6.gem 139264 SHA256 a011aa5cc33e8d12747238b3a20d8e40a148b4d7dba639bddebaa6e7f44e5de0 SHA512 9518d8e046c85b22062815dcd6914f7acf916b8de768cdc04f6cc4ebb7bd4934103e1d1396afaeefa7bbcfbf9c0d7a6cc67111f91d801ab5470717bf6f89cac3 WHIRLPOOL 777c4ec6c8fd2e450169873e37042846dcc47a6c405f54628bf2c2174089a07270b4c1ef83c8e6d8d68f9807f133cdc538d5d9e66a01feac1b2e4e7c5e618b62
