@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Jun 2015; Hans de Graaff <graaff@gentoo.org> -ruby-stemmer-0.9.1.ebuild,
+  -ruby-stemmer-0.9.3.ebuild:
+  Cleanup.
+
 *ruby-stemmer-0.9.6 (03 Jun 2015)
 
   03 Jun 2015; Hans de Graaff <graaff@gentoo.org> +ruby-stemmer-0.9.6.ebuild:
